--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,13 +4,14 @@
 @article{Yu2023ASV,
   abbr    = {TVCG},
   title   = {A Space-Variant Lighting Representation for Photorealistic Rendering of Augmented Content},
-  author  = {Yu Fu * and Hung-Hsiang Chiu * and Homer H. Chen},
-  journal = {IEEE Transactions on Visualization and Computer Graphics <strong>(waiting for submission)</strong>},
+  author  = {Hung-Hsiang Chiu * and Yu Fu * and Homer H. Chen},
+  journal = {IEEE Transactions on Visualization and Computer Graphics <strong>(Under Review)</strong>},
   volume  = {},
   pages   = {},
-  year    = {2023},
+  year    = {2024},
   preview = {bunny.gif},
-  note    = {* indicates equal contribution}
+  note    = {* indicates equal contribution},
+  pdf     = {TVCG_paper.pdf}
 }
 
 @inproceedings{Chang2023ISS,
